[metadata]
name=ccm
version=3.1.6
description=Cassandra Cluster Manager
url='https://github.com/riptano/ccm'
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifier=
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6'

[pbr]
skip_authors=1
skip_changelog=1

[files]
packages =
    ccmlib
    ccmlib.cmds

