[metadata]
name=ccm
version=3.1.6
description=Cassandra Cluster Manager
url='https://github.com/riptano/ccm'
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifier=
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: 3.10'
    'Programming Language :: Python :: 3.11'
    'Programming Language :: Python :: 3.12'



[pbr]
skip_authors=1
skip_changelog=1

[files]
packages =
    ccmlib
    ccmlib.cmds

